[package]
name = "tubecast"
version = "0.1.0"
edition = "2021"
description = "Generic YouTube caster CLI over the Lounge API (Playlet, native YouTube TV apps)"
license = "MIT"
repository = "https://github.com/kernelzeroday/tubecast"
readme = "README.md"
keywords = ["youtube", "cast", "roku", "playlet", "cli"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dialoguer = { version = "0.11", default-features = false, features = ["fuzzy-select"] }
directories = "5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
url = "2"
youtube_lounge_rs = "8"
